tests/compile-fail/ring_drop_with_operations.stderr
error[E0596]: cannot borrow `ring` as mutable, as it is not declared as mutable
  --> tests/compile-fail/ring_drop_with_operations.rs:14:23
   |
14 |         let _future = ring.read(0, buffer.as_mut_slice());
   |                       ^^^^ cannot borrow as mutable
   |
help: consider changing this to be mutable
   |
13 |         let mut ring = Ring::new(10).unwrap();
   |             +++
